test/compile_errors/err_thread_spawn_closure_captures_ref.w
//! expect-check-fail: escaping closure cannot capture ephemeral references

use std.thread

fn bad:
    let x = 42
    let r = &x
    let handle = spawn_os(() => *r)
    let _ = join(handle)
